--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,36 +10,19 @@
 .text--regular {font-size: 14px;}
 .text--small {font-size: 10px;}
 .text--bold { font-weight: 700;}
-
-.dot{
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-}
-
-.dot:before {
-  content: url(../images/dot.svg);
-  width: 5px;
-  height: 5px;
-  margin-right: .52vw;
-  line-height: 0;
-    margin-top: 1px;
-}
+.dot{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-align:center;-ms-flex-align:center;align-items:center}
+.dot:before{content:url(../images/dot.svg);width:5px;height:5px;margin-right:.52vw;line-height:0;margin-top:1px}
 
 /* layout*/
 body {position:relative; width:100%;  margin:0; font-size: 12px; overflow-x: hidden; background: #050505; cursor:none;}
 #contentsArea {position:relative; margin-top: 100vh;}
 section {position:relative; width:100%; }
 nav{position:relative; background:#050505; z-index: 5;}
-main { position:relative; background:#050505; z-index: 5;}
+main { position:relative; height:100vh; background:#050505; z-index: 5;}
 .sec1  { min-height:100vh;  margin-bottom: -10vh;}
 .sec2 {overflow:hidden; }
+.screen {position: relative; top: -30px; height:100vh; background:#050505;}
 .sec-end { border:1px solid #F4F4F4}
-.sec4 {height:100vh; background-color:#F4F4F4;}
-.sec5 {background-color: #050505;} 
 footer{position:fixed; left:0; bottom:0; width:100%; background-color: #050505; z-index: 4; }
 
 /* skroll text appear*/
@@ -67,14 +50,14 @@ footer{position:fixed; left:0; bottom:0; width:100%; background-color: #050505; 
 .showee {opacity:1;} .no-mask {-webkit-mask: none; mask:none;} 
 .custom-cursor__text{  position: absolute; color: #fff; font-weight: 700;  font-size: calc(40px + 4*(100vw - 320px)/960); cursor:none;}
 .custom-cursor__text span {display: none; color: #fff;font-family: 'Libre Franklin',Helvetica,Arial,sans-serif;}
-.noise-bg,.noise-bg:after {pointer-events: none;}
+.noise-bg, .noise-bg:after {pointer-events: none;}
+
 
 /*.sec1 .nav_title*/
 .bar {width:100%; height:0.2%; background:#fff; }
 .fix-bar{position: fixed; top:0; z-index:30;}
 .sec1 .desc {position:absolute; top:50%; transform:translateY(-50%);  margin: 0!important; padding: 0!important;}
 .sec1 .desc .title { font-size: calc(40px + 50*(100vw - 320px)/1120); font-weight:700; color:#fff;  line-height:1.1em; width:80%; text-rendering: optimizeLegibility;}
-
 
 /* .sec2 nav*/
 .sec2 .moving {display:block; white-space: nowrap; }
@@ -100,7 +83,6 @@ footer{position:fixed; left:0; bottom:0; width:100%; background-color: #050505; 
     .nav .menu .title:hover .excerpt-assets.nav-img03 {left: 15%;}
 
 
-
 /* .sec-end   */
 .sec-end {visibility: hidden;   opacity:0; position: fixed; bottom:0; left:0; width: 100%; height: 100vh; overflow:hidden; border:1px solid yellow; -webkit-transition: -webkit-opacity 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.84); transition: -webkit-opacity 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.84);}
 .sec-end.show {visibility: visible; opacity:1;}
@@ -109,7 +91,18 @@ footer{position:fixed; left:0; bottom:0; width:100%; background-color: #050505; 
 .sec-end .wrap {position:relative; top:0; left: 0;  width:100%;  height:100vh; background-color: #f1f1f1; margin:0; text-transform: uppercase;}
 .sec-end #page  img{width:100%; height:auto;} 
 .col {display: -webkit-box; display: -ms-flexbox; display: flex;}
-
+.curtains-ready .plane { opacity: 0;}
+#pattern {display: none; }
+.page-bg {position: fixed; left: 0; top: -5%; z-index: -1; width: 100%; height: 110%; background: transparent;}
+.reveal {margin-top: -5px;padding-top: 5px;overflow: hidden;}
+.revealspan { display: inline-block; vertical-align: middle;}
+.reveal span { display: inline-block;white-space: pre;}
+.noselect { -webkit-user-select: none;  -moz-user-select: none; -ms-user-select: none;user-select: none;}
+.no-js #page {position: static;}
+.no-js .section__nav {display: none;}
+.no-js .section--front .title span:not(:last-child) { margin-top: 0;}
+.no-js .section--quote .quote__text span {margin-top: 0;}
+.no-js .section--quote .statue__img > img {display: none;}
 /* .sec-end .header */
 .sec-end .header { position: fixed; top: 0; left: 0; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify;  -ms-flex-pack: justify; justify-content: space-between; z-index: 90; padding: 60px 100px; width: 100%; pointer-events: none;}
 .sec-end .header .logo {font-size: 12px; cursor: pointer;  font-family: 'Kanit',Helvetica, sans-serif;}
@@ -213,8 +206,6 @@ footer{position:fixed; left:0; bottom:0; width:100%; background-color: #050505; 
 .sec-end #page .section--end .cta-wrap .cta__deco{position:absolute;right:30%;bottom:10%;-webkit-transform:rotate(90deg);transform:rotate(90deg);z-index:-1;font-size:64px;font-weight:700;color:#d9d9d9}
 .sec-end #page .section--end .cta-wrap .cta__deco span{display:block}
 
-
-
 /* .sec-end .footer*/
 .sec-end .footer {position: fixed; bottom: 0; left: 0; z-index: 99; padding: 60px 100px;display: -webkit-box;display: -ms-flexbox;display: flex;-webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between;width: 100%; pointer-events: none;}
  .footer * { pointer-events: auto;}
@@ -226,45 +217,6 @@ footer{position:fixed; left:0; bottom:0; width:100%; background-color: #050505; 
 .sec-end .footer .stalking__media a svg {position: absolute;left: 50%; top: 50%;-webkit-transform: translate(-52%, -50%);transform: translate(-52%, -50%);opacity: .8; pointer-events: none;}
 .sec-end .footer .stalking__media a svg circle {stroke-dasharray: 100.53096;stroke-dashoffset: 100.53096;-webkit-transition: stroke-dashoffset .5s;transition: stroke-dashoffset .5s;}
 .sec-end .footer .stalking__media a:hover circle, .footer .stalking__media a:focus circle {stroke-dashoffset: 0;}
-
-
-.curtains-ready .plane { opacity: 0;}
-#pattern {display: none; }
-.page-bg {position: fixed; left: 0; top: -5%; z-index: -1; width: 100%; height: 110%; background: transparent;}
-  
-.reveal {margin-top: -5px;padding-top: 5px;overflow: hidden;}
-.revealspan { display: inline-block; vertical-align: middle;}
-.reveal span { display: inline-block;white-space: pre;}
-.noselect { -webkit-user-select: none;  -moz-user-select: none; -ms-user-select: none;user-select: none;}
-
-
-
-
-.no-js #page {position: static;}
-
-.no-js .section__nav {display: none;}
-.no-js .section--front .title span:not(:last-child) { margin-top: 0;}
-.no-js .section--quote .quote__text span {margin-top: 0;}
-.no-js .section--quote .statue__img > img {display: none;}
-
-
-
-
-/* .sec4 .Numbers */
-.c-hugeNumbers {position: relative; text-align: center; line-height: 1; overflow: hidden;font-size: 55vw; padding-top: 8.33333rem; box-sizing: border-box; }
-.c-hugeNumbers_wrap{position:relative; }
-.c-hugeNumbers_main {font-weight: 500; letter-spacing: -.22em; transform: translateZ(0); }
-.c-hugeNumbers_half.-top { position: absolute; top: 0; right: 0; bottom: 35%; left: 0; overflow: hidden; background-color:#F4F4F4}
-.c-hugeNumbers_character { position:relative; display:inline-block; color: #1a1a1a;  -webkit-text-stroke-width: 1px; -webkit-text-stroke-color: rgba(26,26,26,.25);  font-family: 'Inria Serif', serif;}
-.c-hugeNumbers_character:first-child, .c-hugeNumbers_character:last-child {color: #f4f4f4; -webkit-text-stroke-width: 1px; -webkit-text-stroke-color: rgba(26,26,26,.25);}
-.is-invert .c-hugeNumbers_character:first-child,.is-invert .c-hugeNumbers_character:last-child {color: #1a1a1a;-webkit-text-stroke-color: hsla(0,0%,95.7%,.25);}
-.c-hugeNumbers_character:last-child {letter-spacing: 0!important}
-.c-hugeNumbers_half.-top .c-hugeNumbers_character {position: relative}
-.c-hugeNumbers_half.-top .c-hugeNumbers_character:first-child {z-index: 3}
-.c-hugeNumbers_half.-top .c-hugeNumbers_character:nth-child(2) {z-index: 2}
-.c-hugeNumbers_text {position: absolute;right: 0;left: 0;text-align: center;transform: translateY(-50%);font-weight: 200;z-index: 4;mix-blend-mode: difference;color: #fff;pointer-events: none;font-size: 2.77778rem;top: 32vw;font-family: 'Inria Serif', serif;}
-
-
 
 
 /* media query */
